<resources>
    <string name="app_name">GetUser</string>
    <string name="error">Error</string>
    <string name="error_internet">Error de conexión con la red</string>
    <string name="error_servidor">Error con el servidor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando">Cargando</string>
    <string name="lista_usuarios_titulo">Lista de usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="id">Id</string>
    <string name="numero">Numero</string>
    <string name="actualizaci_n_de_usuarios">Actualización de usuarios</string>
    <string name="number">Número</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_usuario">Actualizar usuario</string>
    <string name="intenta_mas_tarde">Intenta más tarde</string>
    <string name="obligatori">Obligatorio</string>
    <string name="error_404">Error 404</string>
    <string name="error_500">Error 500</string>
    <string name="actualizado_correctamente">Actualizado correctamente</string>
    <string name="actualizaci_n_incorrecta">Datos no actualizados</string>
    <string name="buscar">Buscar</string>
    <string name="no_se_ha_encontrado_este_nombre">No se ha encontrado este nombre</string>
</resources>
